--- a/apps/web/src/styles/sideNav.module.scss
+++ b/apps/web/src/styles/sideNav.module.scss
@@ -1,6 +1,7 @@
 .sideContainer {
   height: 100vh;
   color: var(--secondary-color);
+  font-weight: 500;
   box-shadow: 5px 0 10px rgba(233, 233, 233, 0.5);
 }
 .side_menu {
