--- a/apps/web/src/styles/user.module.scss
+++ b/apps/web/src/styles/user.module.scss
@@ -2,11 +2,15 @@
   width: 98.4%;
   height: 100vh;
   overflow-y: auto;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;  
 }
 .fields {
   display: flex;
   flex-wrap: wrap;
+}
+
+.box{
+  padding-top: 15px;
 }
 
 .fieldsOne {
