--- a/apps/web/src/styles/masterdata.module.scss
+++ b/apps/web/src/styles/masterdata.module.scss
@@ -1,8 +1,18 @@
 .conatiner {
   width: 100%;
-  //   height: 100vh;
-  padding-top: 10px;
   padding-bottom: 10px;
+}
+.topheader {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 10px 0px 10px 10px;
+  gap: 20px;
+}
+
+
+.description {
+  font-size: 0.7rem;
 }
 
 .textContent {
@@ -15,6 +25,7 @@
 .box {
   position: relative;
 }
+
 .projectField {
   margin-top: -18px;
 }
@@ -122,7 +133,7 @@
 }
 .dividerStyle {
   border-bottom: 1px solid #ccc;
-  padding: 5px 1px 5px 1px;
+  padding: 0px 1px 5px 1px;
 }
 .field {
   padding: 5px 20px 5px 20px;
@@ -199,4 +210,30 @@
   tr:hover {
     /* Add hover styles if needed */
   }
+}
+
+//Masterdata Form
+.sub_container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.formFields {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px 0px 0px 10px;
+  height: 80%;
+}
+.bottom_container {
+  height: 25vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.footer1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
