--- a/apps/web/src/styles/login.module.scss
+++ b/apps/web/src/styles/login.module.scss
@@ -3,25 +3,37 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: 40% 60%;
+  grid-template-columns: 1fr 1fr;
+  // gap: 10px;
+  padding: 10px;
+  // background-color: gray;
   border-top: 8px solid var(--primary-color);
   overflow: hidden;
 }
 
+  // .container > div {
+  //   background-color: rgba(255, 255, 255, 0.8);
+  // }
+
 .imgContainer{
-  display: grid;
+  // width: auto;
+  display: flex;
   justify-content: flex-end;
   align-items: end;
 }
 
 .imagediv {
-  object-fit: fill;
+  width: 100%;
+  height: 75%;
+  // object-fit: fill;
   background-repeat: no-repeat;
 }
 
 .contentDiv {
   display: flex;
   flex-direction: column;
+  // border: 5px solid blue;
+  // background-color: green;
   gap: 5px;
 
   .titlediv {
@@ -49,6 +61,7 @@
 
   .sub_tile_words {
     font-size: 35px;
+    padding-bottom: 15px;
   }
 
   .sub_title_sub {
@@ -60,7 +73,7 @@
 }
 
 .copyRights {
-  margin-top: 69%;
+  padding-top: 70%;
   color: gray;
   font-size: smaller;
 }
@@ -129,4 +142,77 @@
 .passToggle {
   background: none;
   border: none;
+}
+
+@media (min-width: 750px) {
+  .container {
+    padding: 0;
+  }
+}
+@media (max-width: 500px) {
+  .container {
+    // background-color: red;
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
+
+  .imgContainer {
+    grid-row: 1 / 2;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .contentDiv {
+    grid-row: 2 / 2;
+    // margin: 10%;
+  }
+
+  .imagediv {
+    margin: 0;
+    padding: 0;
+    top: 0;
+    width: 80%;
+    height: 100%;
+  }
+
+  .sub_tile_words {
+    color: rgb(81, 79, 79);
+    padding: 10px 0px;
+  }
+
+  .copyRights {
+    padding-top: 8%;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 770px) {
+  .container {
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
+
+  .imgContainer {
+    grid-row: 1 / 2;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .contentDiv {
+    grid-row: 2 / 2;
+    // margin: 10%;
+  }
+
+  .imagediv {
+    width: 60%;
+    height: 100%;
+  }
+
+  .sub_tile_words {
+    color: rgb(81, 79, 79);
+    padding: 10px 0px;
+  }
+
+  .copyRights {
+    padding-top: 8%;
+  }
 }
