UOM and Client side popup implemented

--- a/apps/web/src/styles/masterdata.module.scss
+++ b/apps/web/src/styles/masterdata.module.scss
@@ -5,7 +5,7 @@
 .topheader {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding: 10px 0px 10px 10px;
   gap: 20px;
 }
