--- a/apps/web/src/styles/gstList.module.scss
+++ b/apps/web/src/styles/gstList.module.scss
@@ -159,9 +159,12 @@
     gap: 10px;
     padding:10px 20px 10px 0px ;
   }
-  .cancelButton:hover {
-    background-color: #c4c4c6;
-    color: #070707;
+  .footer{
+    margin-top: 350px;
+  }
+  .cancelButton {
+    background-color: var(--danger-color);
+    color: #b42318;
   }
   .titleStyle {
     padding: 10px 10px 1px 2op;
@@ -200,4 +203,41 @@
     color: red;
     font-size: small;
     padding: 5px;
+  }
+  .topHeading {
+    // background-color: aqua;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .heading {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+  }
+  
+  .subHeading {
+    display: flex;
+    flex-direction: row;
+    gap: 7px;
+    align-items: center;
+  }
+  .emptyDataHandling {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+  }
+  .textmin {
+    padding: 10px;
+    font-weight: 400;
+    font-size: 14px;
+  }
+  .textmax {
+    font-weight: 700;
+    font-size: 16px;
   }
