--- a/apps/web/src/styles/labourAdd.module.scss
+++ b/apps/web/src/styles/labourAdd.module.scss
@@ -1,23 +1,19 @@
 .box {
-    padding: 10px 0px 10px 10px;
+    // padding: 10px 0px 10px 10px;
 }
-.form {
-    display: flex;
-    flex-direction: row;
-    row-gap: 50px;
-    justify-content: center;
-}
+
 .formFields {
     padding: 20px 10px 0px 20px;
 }
 .dividerStyle {
-    border-top: 2px solid #ccc;
+    border-top: 1px solid #ccc;
+    padding: 5px 1px 5px 1px;
 }
 .fieldRow {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 20px;
+    flex-direction: column;
+    // justify-content: space-between;
+    // gap: 20px;
 }
 .budgetRow {
     width: 400px;
@@ -31,3 +27,21 @@
     justify-content: flex-end;
     gap: 20px;
 }
+
+.cancelButton {
+    background-color: var(--danger-color);
+    color: #b42318;
+  }
+
+.submitButton{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    // padding: 10px;
+    padding: 0px 15px 20px 0px;
+    gap: 10px;
+
+  }
+  .footer{
+    margin-top: 200px;
+  }
