--- a/apps/web/src/styles/labourList.module.scss
+++ b/apps/web/src/styles/labourList.module.scss
@@ -200,3 +200,40 @@
 .field {
   padding: 5px 20px 5px 20px;
 }
+.topHeading {
+  // background-color: aqua;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.heading {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
+}
+
+.subHeading {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+}
+.emptyDataHandling {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+}
+.textmin {
+  padding: 10px;
+  font-weight: 400;
+  font-size: 14px;
+}
+.textmax {
+  font-weight: 700;
+  font-size: 16px;
+}
