--- a/apps/web/src/styles/listItem.module.scss
+++ b/apps/web/src/styles/listItem.module.scss
@@ -1,6 +1,5 @@
 
 .container{
-  margin: 2%;
   display: flex;
   flex-direction: column;
 }
@@ -120,4 +119,26 @@ display: flex;
   tr:hover {
     /* Add hover styles if needed */
   }
+}
+
+.topHeading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
+
+.heading {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+
+.subHeading {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
 }
