stock outward changes

--- a/apps/web/src/styles/stockOutwardList.module.scss
+++ b/apps/web/src/styles/stockOutwardList.module.scss
@@ -2,8 +2,11 @@
     width: 100%;
   }
   
-  .box {
-    position: relative;
+  .topHeading {
+    // position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
   
   .textContent {
