--- a/apps/web/src/styles/stockOutwardAdd.module.scss
+++ b/apps/web/src/styles/stockOutwardAdd.module.scss
@@ -221,40 +221,43 @@
     font-size: x-small
 }
 
+
+/* Apply the scrollable_table class to your table element */
 .scrollable_table {
     width: 100%;
-    border-collapse: collapse;
     height: 100%;
-
+    padding: 10px 10px; /* Adjust padding */
+    gap: 12px;
+    border-collapse: collapse;
+  
     th,
     td {
-        border: 1px solid #000000;
-        text-align: left;
-        font-weight: 500;
-        font-size: 11px;
-
+      padding: 10px 10px 10px 24px; /* Adjust padding */
+      text-align: left;
+      font-weight: 500;
+      font-size: 12px;
+      border: none; /* Remove borders */
+      border-bottom: 0.1px solid #f0f0f0;
     }
-
-    thead {
-        tr {
-            th {
-                background-color: #f2f2f2;
-                text-transform: uppercase;
-                margin-top: 10px;
-                font-weight: 600;
-            }
-        }
-    }
-
+  
     td {
-        align-items: left;
+      border-bottom: 0.1px solid #f0f0f0;
     }
-
+  
+    thead {
+      tr {
+        th {
+          color: #667085;
+          font-weight: 700;
+        }
+      }
+    }
     td:hover,
     tr:hover {
-        background-color: rgb(239, 239, 239);
+      /* Add hover styles if needed */
     }
-}
+  }
+  
 
 .tableHeading {
     align-items: center;
