--- a/apps/web/src/styles/machinery.module.scss
+++ b/apps/web/src/styles/machinery.module.scss
@@ -99,10 +99,10 @@
 }
 
 .tableContainer {
-    padding: 10px;
+    // padding: 10px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    // gap: 20px;
 }
 
 // table {
