--- a/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
+++ b/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
@@ -100,6 +100,7 @@
   flex-direction: row;
   gap: 10px;
   justify-content: flex-end;
+  padding-right: 10px;
 }
 .draftButton {
   color: var(--secondary-color);
