--- a/apps/web/src/styles/home.module.scss
+++ b/apps/web/src/styles/home.module.scss
@@ -256,10 +256,11 @@
 
 .barCarddDiv {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 10px;
   gap: 30px;
 }
+
 
 .card2 {
   display: flex;
@@ -293,11 +294,138 @@
   justify-content: space-around;
   // width: 100%;
   gap: 30px;
-  padding: 10px 50px 10px 100px;
+  padding: 10px 50px 30px 100px;
 }
 
 .chart {
   width: 100%;
   padding: 20px 40px;
   height: 100%;
+}
+
+.projectDiv {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.projectDiv1 {
+  // width: 35%;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.projectDiv2 {
+  // width: 35%;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.projectPayment{
+  color: red;
+  opacity: 0.7;
+}
+
+
+.projectDiv3 {
+  // width: 30%;
+  display: flex;
+  flex-direction: column;
+  // justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+}
+
+.dividerStyle {
+  border-bottom: 1px solid black;
+  // padding-bottom: 5px;
+}
+
+.scrollable_table {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
+  /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 10px 10px 24px;
+    /* Adjust padding */
+    text-align: left;
+    font-weight: 500;
+    // border: 0px 0px 1px;
+    font-size: 14px;
+    border: none;
+    color: var(--secondary-color);
+    /* Remove borders */
+    // border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
+  }
+
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
+      }
+    }
+  }
+
+  .spantag {
+    color: black;
+    display: block;
+    font-size: 10px;
+  }
+
+  .budget {
+    font-weight: 700;
+    color: #000;
+  }
+
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
+}
+
+.centerCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+
+.centerFirst {
+  display: flex;
+  flex-direction: row;
+  gap: 120px;
+  padding: 20px;
+}
+
+.centerGap {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+
+.headingGap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.dashedLine {
+  border-left: 0.5px dashed #000; /* Adjust the color and thickness as needed */
 }
