--- a/apps/web/src/styles/gstList.module.scss
+++ b/apps/web/src/styles/gstList.module.scss
@@ -83,7 +83,7 @@
 
   th,
   td {
-    padding: 10px 10px 10px 24px;
+    padding: 5px 10px 5px 24px;
     /* Adjust padding */
     text-align: left;
     font-weight: 500;
@@ -239,6 +239,8 @@
   align-items: center;
   justify-content: space-between;
   padding-bottom: 20px;
+  padding-bottom: 15px;
+
 }
 
 .heading {
