--- a/apps/web/src/styles/labourList.module.scss
+++ b/apps/web/src/styles/labourList.module.scss
@@ -25,7 +25,7 @@
 
   th,
   td {
-    padding: 10px 10px 10px 24px; /* Adjust padding */
+    padding: 5px 10px 5px 24px; /* Adjust padding */
     text-align: left;
     font-weight: 500;
     // border: 0px 0px 1px;
@@ -206,6 +206,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 15px;
 }
 
 .heading {
