--- a/apps/web/src/styles/projectWorkBreakDownList.module.scss
+++ b/apps/web/src/styles/projectWorkBreakDownList.module.scss
@@ -113,7 +113,7 @@
 
   th,
   td {
-    padding: 10px 10px 10px 24px;
+    padding: 5px 10px 5px 24px;
     /* Adjust padding */
     text-align: left;
     font-weight: 500;
@@ -149,6 +149,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 15px;
 }
 
 .heading {
