--- a/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
+++ b/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
@@ -140,3 +140,16 @@
   text-align: left;
   color: #525252;
 }
+
+.viewFiles {
+  // padding: 0px 0px 0px 50px;
+}
+
+.listStyles {
+  font-size: 0.85rem;
+}
+
+.errorStyles {
+  color: red;
+  font-size: 0.75rem;
+}
