color change for status

--- a/apps/web/src/styles/expenseApprove.module.scss
+++ b/apps/web/src/styles/expenseApprove.module.scss
@@ -140,13 +140,13 @@
 }
 
 .approvedStatus {
-    background-color: #cff3de;
+    background-color: #ecfdf3;
     padding: 4px;
     border-radius: 50px;
     color: #027a48;
   }
   .pendingStatus {
-    background-color:#f7e0f0;
+    background-color:#FDF2FA;
     padding: 4px;
     border-radius: 35px;
     color:  #C11574
