--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -147,13 +147,13 @@
 }
 
 .completedStatus {
-  background-color: #cff3de;
+  background-color: #ecfdf3;
   padding: 6px;
   border-radius: 50px;
   color: #027a48;
 }
 .inprogressStatus {
-  background-color:#f7e0f0;
+  background-color:#FDF2FA;
   padding: 6px;
   border-radius: 50px;
   color:  #C11574
