--- a/apps/web/src/styles/vendorSelect.module.scss
+++ b/apps/web/src/styles/vendorSelect.module.scss
@@ -1,322 +1,323 @@
- .container {
-     width: 100%;
- }
+.container {
+  width: 100%;
+}
 
- .content {
-     font-size: 0.7rem;
- }
+.content {
+  font-size: 0.7rem;
+}
 
- .textContent {
-     padding: 10px;
- }
+.textContent {
+  padding: 10px;
+}
 
- .dividerStyle {
-     border-top: 1px solid #ccc;
-     margin-bottom: 10px;
- }
+.dividerStyle {
+  border-top: 1px solid #ccc;
+  margin-bottom: 10px;
+}
 
- .tableContainer {
-     padding: 10px 40px 0px 40px;
-     display: flex;
-     flex-direction: column;
-     gap: 20px;
- }
+.tableContainer {
+  padding: 10px 40px 0px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
- // table {
- //     border-collapse: collapse;
- //     width: 100%;
- //     border: 1px solid #ccc;
- // }
+// table {
+//     border-collapse: collapse;
+//     width: 100%;
+//     border: 1px solid #ccc;
+// }
 
- // th {
- //     background-color: #f2f2f2;
- //     padding: 8px;
- // }
+// th {
+//     background-color: #f2f2f2;
+//     padding: 8px;
+// }
 
- // tr {
- //     border-bottom: 1px solid #ccc;
- // }
+// tr {
+//     border-bottom: 1px solid #ccc;
+// }
 
- // td {
- //     padding: 8px;
- // }
+// td {
+//     padding: 8px;
+// }
 
- .tablerow {
-     display: flex;
-     flex-direction: row;
-     column-gap: 15px;
-     cursor: pointer;
- }
+.tablerow {
+  display: flex;
+  flex-direction: row;
+  column-gap: 15px;
+  cursor: pointer;
+}
 
- // tr:nth-child(even) {
- //     background-color: whitesmoke;
- // }
+// tr:nth-child(even) {
+//     background-color: whitesmoke;
+// }
 
- // tr:hover {
- //     background-color: #e0e0e0;
- // }
+// tr:hover {
+//     background-color: #e0e0e0;
+// }
 
- .button {
-     display: flex;
-     flex-direction: row;
-     justify-content: flex-end;
- }
+.button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
 
- .sub_header {
-     height: 10vh;
-     display: flex;
- }
+.sub_header {
+  height: 10vh;
+  display: flex;
+}
 
- .logo {
-     font-weight: bold;
-     font-size: 16px;
-     color: var(--secondary-color);
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     width: 5%;
-     cursor: pointer;
- }
+.logo {
+  font-weight: bold;
+  font-size: 16px;
+  color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 5%;
+  cursor: pointer;
+}
 
- .vertical {
-     position: relative;
- }
+.vertical {
+  position: relative;
+}
 
- .verticalLine::before {
-     content: '';
-     position: absolute;
-     top: 0;
-     bottom: 0;
-     width: 1px;
-     /* Adjust the width of the line */
-     background-color: #7d7d7d;
-     /* Adjust the color as needed */
-     height: 100%;
- }
+.verticalLine::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  /* Adjust the width of the line */
+  background-color: #7d7d7d;
+  /* Adjust the color as needed */
+  height: 100%;
+}
 
- .content {
-     font-size: 0.7rem;
-     padding-bottom: 5px;
- }
+.content {
+  font-size: 0.7rem;
+  padding-bottom: 5px;
+}
 
- //***************Custom Menu component SCSS***************//
+//***************Custom Menu component SCSS***************//
 
- .customMenu {
-     position: relative;
-     display: inline-block;
+.customMenu {
+  position: relative;
+  display: inline-block;
 
-     .menuText {
-         color: blue;
-     }
+  .menuText {
+    color: blue;
+  }
 
-     .menuItem {
-         color: var(--secondary-color);
-     }
+  .menuItem {
+    color: var(--secondary-color);
+  }
 
-     .menuDropdown {
-         position: absolute;
-         top: 100%;
-         left: 0;
-         display: flex;
-         flex-direction: column;
-         background-color: white;
-         border: 1px solid #ccc;
-         border-radius: 8px;
-         z-index: 1;
+  .menuDropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    z-index: 1;
 
-         div {
-             padding: 8px 12px;
-             white-space: nowrap;
-             cursor: pointer;
+    div {
+      padding: 8px 12px;
+      white-space: nowrap;
+      cursor: pointer;
 
-             &.disabled {
-                 cursor: not-allowed;
-                 color: #999;
+      &.disabled {
+        cursor: not-allowed;
+        color: #999;
 
-                 &:hover {
-                     background-color: inherit;
-                     color: #999;
-                 }
-             }
+        &:hover {
+          background-color: inherit;
+          color: #999;
+        }
+      }
 
-             &:not(.disabled):hover {
-                 background-color: #f0f0f0;
-                 color: black;
-             }
-         }
-     }
+      &:not(.disabled):hover {
+        background-color: #f0f0f0;
+        color: black;
+      }
+    }
+  }
 
-     // .menuDropdownOne {
-     //     position: absolute;
-     //     top: 0;
-     //     left: -5500%;
-     //     display: flex;
-     //     flex-direction: column;
-     //     // background-color: rgb(222, 29, 29);
-     //     border: 1px solid #ccc;
-     //     // border-radius: 8px;
-     //     z-index: 1;
-     //     div {
-     //         padding: 8px 12px;
-     //         white-space: nowrap;
-     //         cursor: pointer;
+  // .menuDropdownOne {
+  //     position: absolute;
+  //     top: 0;
+  //     left: -5500%;
+  //     display: flex;
+  //     flex-direction: column;
+  //     // background-color: rgb(222, 29, 29);
+  //     border: 1px solid #ccc;
+  //     // border-radius: 8px;
+  //     z-index: 1;
+  //     div {
+  //         padding: 8px 12px;
+  //         white-space: nowrap;
+  //         cursor: pointer;
 
+  //         &.disabled {
+  //             cursor: not-allowed;
+  //             color: #999;
 
-     //         &.disabled {
-     //             cursor: not-allowed;
-     //             color: #999;
+  //             &:hover {
+  //                 background-color: inherit;
+  //                 // color: #999;
+  //             }
+  //         }
 
-     //             &:hover {
-     //                 background-color: inherit;
-     //                 // color: #999;
-     //             }
-     //         }
+  //         &:not(.disabled):hover {
+  //             background-color: #f0f0f0;
+  //             color: black;
+  //         }
+  //     }
+  // }
+  .menuDropdownOne {
+    position: absolute;
+    top: 0;
+    left: -5500%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    z-index: 1;
 
-     //         &:not(.disabled):hover {
-     //             background-color: #f0f0f0;
-     //             color: black;
-     //         }
-     //     }
-     // }
-     .menuDropdownOne {
-         position: absolute;
-         top: 0;
-         left: -5500%;
-         display: flex;
-         flex-direction: column;
-         background-color: white;
-         border: 1px solid #ccc;
-         border-radius: 8px;
-         z-index: 1;
+    div {
+      padding: 8px 12px;
+      white-space: nowrap;
+      cursor: pointer;
 
-         div {
-             padding: 8px 12px;
-             white-space: nowrap;
-             cursor: pointer;
+      &.disabled {
+        cursor: not-allowed;
+        color: #999;
 
-             &.disabled {
-                 cursor: not-allowed;
-                 color: #999;
+        &:hover {
+          background-color: inherit;
+          color: #999;
+        }
+      }
 
-                 &:hover {
-                     background-color: inherit;
-                     color: #999;
-                 }
-             }
+      &:not(.disabled):hover {
+        background-color: #f0f0f0;
+        color: black;
+      }
+    }
+  }
 
-             &:not(.disabled):hover {
-                 background-color: #f0f0f0;
-                 color: black;
-             }
-         }
-     }
+  .menuDropdownAbstract {
+    position: absolute;
+    top: 100;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-weight: 400;
+    font-size: 12px;
+    z-index: 1;
 
-     .menuDropdownAbstract {
-         position: absolute;
-         top: 100;
-         left: 0;
-         display: flex;
-         flex-direction: column;
-         background-color: white;
-         border: 1px solid #ccc;
-         border-radius: 8px;
-         font-weight: 400;
-         font-size: 12px;
-         z-index: 1;
+    div {
+      padding: 8px 12px;
+      white-space: nowrap;
+      cursor: pointer;
 
-         div {
-             padding: 8px 12px;
-             white-space: nowrap;
-             cursor: pointer;
+      &.disabled {
+        cursor: not-allowed;
+        color: #999;
+        // &:hover {
+        //     background-color: inherit;
+        //     color: #999;
+        // }
+      }
 
-             &.disabled {
-                 cursor: not-allowed;
-                 color: #999;
-                 // &:hover {
-                 //     background-color: inherit;
-                 //     color: #999;
-                 // }
-             }
+      &:not(.disabled):hover {
+        background-color: #f0f0f0;
+        color: black;
+      }
+    }
+  }
 
-             &:not(.disabled):hover {
-                 background-color: #f0f0f0;
-                 color: black;
-             }
-         }
-     }
+  .menuDropdownItems {
+    position: absolute;
+    top: 0;
+    left: -2700%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    z-index: 1;
 
-     .menuDropdownItems {
-         position: absolute;
-         top: 0;
-         left: -2700%;
-         display: flex;
-         flex-direction: column;
-         background-color: white;
-         border: 1px solid #ccc;
-         border-radius: 8px;
-         z-index: 1;
+    div {
+      padding: 8px 12px;
+      white-space: nowrap;
+      cursor: pointer;
 
-         div {
-             padding: 8px 12px;
-             white-space: nowrap;
-             cursor: pointer;
+      &.disabled {
+        cursor: not-allowed;
+        color: #999;
 
-             &.disabled {
-                 cursor: not-allowed;
-                 color: #999;
+        &:hover {
+          background-color: inherit;
+          color: #999;
+        }
+      }
 
-                 &:hover {
-                     background-color: inherit;
-                     color: #999;
-                 }
-             }
+      &:not(.disabled):hover {
+        background-color: #f0f0f0;
+        color: black;
+      }
+    }
+  }
+}
 
-             &:not(.disabled):hover {
-                 background-color: #f0f0f0;
-                 color: black;
-             }
-         }
-     }
+.scrollable_table {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
+  /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
 
- }
+  th,
+  td {
+    padding: 10px 10px 10px 24px;
+    /* Adjust padding */
+    text-align: left;
+    font-weight: 500;
+    // border: 0px 0px 1px;
+    font-size: 12px;
+    border: none;
+    /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
 
- .scrollable_table {
-     width: 100%;
-     height: 100%;
-     padding: 10px 10px;
-     /* Adjust padding */
-     gap: 12px;
-     border-collapse: collapse;
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
+  }
 
-     th,
-     td {
-         padding: 10px 10px 10px 24px;
-         /* Adjust padding */
-         text-align: left;
-         font-weight: 500;
-         // border: 0px 0px 1px;
-         font-size: 12px;
-         border: none;
-         /* Remove borders */
-         border-bottom: 0.1px solid #f0f0f0;
-     }
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
+      }
+    }
+  }
 
-     td {
-         border-bottom: 0.1px solid #f0f0f0;
-         // border-bottom :0px, 0px, 1px, 0px
-     }
-
-     thead {
-         tr {
-             th {
-                 color: #667085;
-                 font-weight: 700;
-             }
-         }
-     }
-
-     td:hover,
-     tr:hover {
-         /* Add hover styles if needed */
-     }
- }
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
+}
+.displayNone {
+  display: none;
+}
