site expenses new

--- a/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
+++ b/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
@@ -162,6 +162,11 @@
   font-size: 0.75rem;
 }
 
+.billNumberErr{
+  color: red;
+  font-size: 0.75rem;
+  // background-color: #667085;
+}
 .expCode{
   display: flex;
   flex-direction: row;
