--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -450,177 +450,47 @@
 
 .customMenu {
   position: relative;
-  display: inline-block;
-
-  .menuText {
-    color: blue;
-  }
+  // display: inline-block;
 
   .menuItem {
     color: var(--secondary-color);
   }
+}
+.iconContainer {
+  display: flex;
+  justify-content: space-between;
+}
+.menuText {
+  color: blue;
+}
+.menuDropdownItems {
+  position: absolute;
+  // top: 0;
+  left: -65%;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  z-index: 1;
+  div {
+    padding: 8px 12px;
+    // white-space: nowrap;
+    cursor: pointer;
 
-  .menuDropdown {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    z-index: 1;
+    &.disabled {
+      cursor: not-allowed;
+      color: #999;
 
-    div {
-      padding: 8px 12px;
-      white-space: nowrap;
-      cursor: pointer;
-
-      &.disabled {
-        cursor: not-allowed;
+      &:hover {
+        background-color: inherit;
         color: #999;
-
-        &:hover {
-          background-color: inherit;
-          color: #999;
-        }
-      }
-
-      &:not(.disabled):hover {
-        background-color: #f0f0f0;
-        color: black;
       }
     }
-  }
 
-  // .menuDropdownOne {
-  //     position: absolute;
-  //     top: 0;
-  //     left: -5500%;
-  //     display: flex;
-  //     flex-direction: column;
-  //     // background-color: rgb(222, 29, 29);
-  //     border: 1px solid #ccc;
-  //     // border-radius: 8px;
-  //     z-index: 1;
-  //     div {
-  //         padding: 8px 12px;
-  //         white-space: nowrap;
-  //         cursor: pointer;
-
-  //         &.disabled {
-  //             cursor: not-allowed;
-  //             color: #999;
-
-  //             &:hover {
-  //                 background-color: inherit;
-  //                 // color: #999;
-  //             }
-  //         }
-
-  //         &:not(.disabled):hover {
-  //             background-color: #f0f0f0;
-  //             color: black;
-  //         }
-  //     }
-  // }
-  .menuDropdownOne {
-    position: absolute;
-    top: 0;
-    left: -5500%;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    z-index: 1;
-
-    div {
-      padding: 8px 12px;
-      white-space: nowrap;
-      cursor: pointer;
-
-      &.disabled {
-        cursor: not-allowed;
-        color: #999;
-
-        &:hover {
-          background-color: inherit;
-          color: #999;
-        }
-      }
-
-      &:not(.disabled):hover {
-        background-color: #f0f0f0;
-        color: black;
-      }
-    }
-  }
-
-  .menuDropdownAbstract {
-    position: absolute;
-    top: 100;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-weight: 400;
-    font-size: 12px;
-    z-index: 1;
-
-    div {
-      padding: 8px 12px;
-      white-space: nowrap;
-      cursor: pointer;
-
-      &.disabled {
-        cursor: not-allowed;
-        color: #999;
-        // &:hover {
-        //     background-color: inherit;
-        //     color: #999;
-        // }
-      }
-
-      &:not(.disabled):hover {
-        background-color: #f0f0f0;
-        color: black;
-      }
-    }
-  }
-
-  .menuDropdownItems {
-    position: absolute;
-    top: 0;
-    left: -2700%;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    z-index: 1;
-
-    div {
-      padding: 8px 12px;
-      white-space: nowrap;
-      cursor: pointer;
-
-      &.disabled {
-        cursor: not-allowed;
-        color: #999;
-
-        &:hover {
-          background-color: inherit;
-          color: #999;
-        }
-      }
-
-      &:not(.disabled):hover {
-        background-color: #f0f0f0;
-        color: black;
-      }
+    &:not(.disabled):hover {
+      background-color: #f0f0f0;
+      color: black;
     }
   }
 }
