--- a/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
+++ b/apps/web/src/styles/newStyles/projectSiteExpense.module.scss
@@ -164,7 +164,8 @@
 
 .billNumberErr{
   color: red;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
+  // padding-top: 10px;
   // background-color: #667085;
 }
 .expCode{
