--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -306,6 +306,11 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
+.searchBar {
+  padding: 5px 15px 0
+}
+
 .filters {
   display: flex;
   gap: 20px;
