--- a/apps/web/src/styles/vendor.module.scss
+++ b/apps/web/src/styles/vendor.module.scss
@@ -180,7 +180,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 25px;
+  padding: 10px 10px 15px 10px;
 }
 
 .heading {
@@ -195,6 +195,7 @@
   flex-direction: row;
   gap: 7px;
   align-items: center;
+  padding-left: 10px;
 }
 
 .emptyDataHandling {
@@ -214,4 +215,10 @@
 .textmax {
   font-weight: 700;
   font-size: 16px;
+}
+
+.filters {
+  display: flex;
+  gap: 20px;
+  padding-top: 5px;
 }
