--- a/apps/web/src/styles/newStyles/siteExpenseList.module.scss
+++ b/apps/web/src/styles/newStyles/siteExpenseList.module.scss
@@ -161,3 +161,34 @@
 .spanContent{
   font-size: 0.8rem;
 }
+
+.subHeading {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+}
+
+.emptyDataHandling {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+}
+
+.textmin {
+  padding: 10px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.textmax {
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.image {
+  display: flex;
+  justify-content: center;
+}
