Initial loading page & changes in search implementation

--- a/apps/web/src/styles/labourList.module.scss
+++ b/apps/web/src/styles/labourList.module.scss
@@ -228,6 +228,15 @@
   justify-content: center;
   align-items: center;
   gap: 2px;
+  padding-top: 50px;
+}
+
+.emptyButton {
+  margin-top: 25px;
+}
+
+.spanContent {
+  font-weight: 400;
 }
 .textmin {
   padding: 10px;
