--- a/apps/web/src/styles/machinery.module.scss
+++ b/apps/web/src/styles/machinery.module.scss
@@ -167,6 +167,14 @@
     align-items: center;
   }
   
+  .spanContent {
+    font-weight: 400;
+  }
+  
+  .emptyButton {
+    margin-top: 25px;
+  }
+  
   .emptyDataHandling {
     display: flex;
     flex-direction: column;
