--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -270,6 +270,15 @@
   align-items: center;
 }
 
+.spanContent {
+  font-weight: 400;
+}
+
+.emptyButton {
+  margin-top: 25px;
+}
+
+
 .emptyDataHandling {
   display: flex;
   flex-direction: column;
