--- a/apps/web/src/styles/vendor.module.scss
+++ b/apps/web/src/styles/vendor.module.scss
@@ -204,7 +204,17 @@
   justify-content: center;
   align-items: center;
   gap: 2px;
+  padding-top: 55px;
 }
+
+
+.emptyButton {
+  margin-top: 25px;
+}
+
+.spanContent {
+  font-weight: 400;
+} 
 
 .textmin {
   padding: 10px;
