--- a/apps/web/src/styles/gstList.module.scss
+++ b/apps/web/src/styles/gstList.module.scss
@@ -263,8 +263,16 @@
   justify-content: center;
   align-items: center;
   gap: 2px;
+  padding-top: 30px;
 }
 
+.spanContent {
+  font-weight: 400;
+}
+
+.emptyButton {
+  margin-top: 25px;
+}
 .textmin {
   padding: 10px;
   font-weight: 400;
