--- a/apps/web/src/styles/listItem.module.scss
+++ b/apps/web/src/styles/listItem.module.scss
@@ -143,6 +143,20 @@ display: flex;
   align-items: center;
 }
 
+.emptyDataHandling {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spanContent {
+  font-weight: 400;
+}
+
+.emptyButton {
+  margin-top: 25px;
+}
+
 .filters {
   display: flex;
   gap: 20px;
