--- a/apps/web/src/styles/stockOutwardAdd.module.scss
+++ b/apps/web/src/styles/stockOutwardAdd.module.scss
@@ -1,370 +1,366 @@
 .text {
-    padding: 10px 10px 0px 5px;
-    display: flex;
-    flex-direction: column;
+  padding: 10px 10px 0px 5px;
+  display: flex;
+  flex-direction: column;
 }
 
 .textStyle {
-    padding-left: 5px;
-    padding-top: 5px;
+  padding-left: 5px;
+  padding-top: 5px;
 }
 
 .container {
-    width: 100%;
-    padding-top: 0px;
-    padding-bottom: 10px;
-    // padding-left: 20px;
+  width: 100%;
+  padding-top: 0px;
+  padding-bottom: 10px;
+  // padding-left: 20px;
 }
 
 .secondButtonField {
-    display: flex;
-    justify-content: flex-end;
-    background-color: #000000;
+  display: flex;
+  justify-content: flex-end;
+  background-color: #000000;
 }
 
 .textContent {
-    padding-left: 10px;
-    padding-top: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
 .content {
-    font-size: 0.7rem;
+  font-size: 0.7rem;
 }
 
 .box {
-    position: relative;
+  position: relative;
 }
 
 .projectField {
-    margin-top: -18px;
+  margin-top: -18px;
 }
 
 .projectHeading {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 .fields_container {
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
 }
 
 .fields_container_1 {
-    display: flex;
-    justify-content: flex-start;
-    width: 100%;
-    gap: 20px;
-    padding-bottom: 10px;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  gap: 20px;
+  padding-bottom: 10px;
 }
 
 .fields_container_2 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    gap: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
 }
 
 .fields_container_3 {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 70%;
-    gap: 20px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 70%;
+  gap: 20px;
 }
 
 .secondHeader {
-    padding: 10px 5px 10px 5px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
+  padding: 10px 5px 10px 5px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 .box::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: #ccc;
-    position: absolute;
-    bottom: 20;
-    left: 10;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  position: absolute;
+  bottom: 20;
+  left: 10;
 }
 
 .box:last-child::after {
-    display: none;
+  display: none;
 }
 
 .tableContainer {
-    // padding: 0px 10px 0px 0px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    // width: 100%;
-    gap: 10px;
+  // padding: 0px 10px 0px 0px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  // width: 100%;
+  gap: 10px;
 }
 
 .searchField {
-    padding: 10px 10px 0px 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 10px;
+  padding: 10px 10px 0px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .inputFilter {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .searchButton {
-    padding: 12px 20px 12px 20px;
-    border-radius: 8px;
-    border: 1px;
-    gap: 8px;
-    color: #6941c6;
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #6941c6;
 }
 
 .searchButton:hover {
-    background-color: #7f56d9;
-    color: #ffffff;
+  background-color: #7f56d9;
+  color: #ffffff;
 }
 
 .resetButton [disabled] {
-    padding: 12px 20px 12px 20px;
-    border-radius: 8px;
-    border: 1px;
-    gap: 8px;
-    color: #848289;
-    background-color: #ccc;
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #848289;
+  background-color: #ccc;
 }
 
 .resetButton:not([disabled]):hover {
-    background-color: #c4c4c6;
-    color: #ffffff;
+  background-color: #c4c4c6;
+  color: #ffffff;
 }
 
-
 .formContainer {
-    width: 350px;
-    display: flex;
-    flex-direction: column;
+  width: 350px;
+  display: flex;
+  flex-direction: column;
 }
 
 .formButton {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 10px;
-    padding: 10px 20px 10px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 10px;
+  padding: 10px 20px 10px 0px;
 }
 
 .cancelButton:hover {
-    background-color: #c4c4c6;
-    color: #070707;
+  background-color: #c4c4c6;
+  color: #070707;
 }
 
 .titleStyle {
-    padding: 10px 10px 1px 2op;
+  padding: 10px 10px 1px 2op;
 }
 
 .dividerStyle {
-    border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
 
 .dividerStyle1 {
-    border-bottom: 1px solid #ccc;
-    padding: 5px 1px 5px 1px;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 1px 5px 1px;
 }
 
 .field {
-    padding: 5px 20px 5px 20px;
+  padding: 5px 20px 5px 20px;
 }
 
 .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px 20px 5px 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 20px 5px 20px;
 }
 
 .inputField {
-    width: 30%;
+  width: 30%;
 }
 
 .tablerow {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .fieldStyle {
-    width: 18%;
+  width: 18%;
 }
 
 .profileDetail {
-    display: flex;
-    gap: 10px;
-    align-items: center;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
 .profileContents {
-
-    display: flex;
-    text-align: left;
-    flex-direction: column;
-    gap: 1px;
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+  gap: 1px;
 }
 
 .profileName {
-    align-items: center;
+  align-items: center;
 }
 
 .emailContent {
-    font-size: x-small
+  font-size: x-small;
 }
-
 
 /* Apply the scrollable_table class to your table element */
 .scrollable_table {
-    width: 100%;
-    height: 100%;
-    padding: 10px 10px;
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
+  /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 10px 10px 24px;
     /* Adjust padding */
-    gap: 12px;
-    border-collapse: collapse;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    border: none;
+    /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
 
-    th,
-    td {
-        padding: 10px 10px 10px 24px;
-        /* Adjust padding */
-        text-align: left;
-        font-weight: 500;
-        font-size: 12px;
-        border: none;
-        /* Remove borders */
-        border-bottom: 0.1px solid #f0f0f0;
-    }
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+  }
 
-    td {
-        border-bottom: 0.1px solid #f0f0f0;
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
+      }
     }
+  }
 
-    thead {
-        tr {
-            th {
-                color: #667085;
-                font-weight: 700;
-            }
-        }
-    }
-
-    td:hover,
-    tr:hover {
-        /* Add hover styles if needed */
-    }
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
 }
 
-
 .tableHeading {
-    align-items: center;
+  align-items: center;
 }
 
 .pagination {
-    display: flex;
-    justify-content: end;
-
+  display: flex;
+  justify-content: end;
 }
 
 .buttonFields {
-    padding: 10px 10px 10px 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 20px;
+  padding: 10px 10px 10px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 20px;
 }
 
 .checkBox {
-    margin-bottom: 4px;
-    font-size: 0.8rem;
-    color: #333c44;
-    font-weight: 600;
+  margin-bottom: 4px;
+  font-size: 0.8rem;
+  color: #333c44;
+  font-weight: 600;
 }
 
 .sub_header {
-    height: 10vh;
-    display: flex;
+  height: 10vh;
+  display: flex;
 }
 
 .logo {
-    font-weight: bold;
-    font-size: 16px;
-    color: var(--secondary-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 5%;
-    cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 5%;
+  cursor: pointer;
 }
 
 .vertical {
-    position: relative;
+  position: relative;
 }
 
 .verticalLine::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 1px;
-    /* Adjust the width of the line */
-    background-color: #7d7d7d;
-    /* Adjust the color as needed */
-    height: 100%;
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  /* Adjust the width of the line */
+  background-color: #7d7d7d;
+  /* Adjust the color as needed */
+  height: 100%;
 }
 
 .content {
-    font-size: 0.7rem;
-    padding-bottom: 5px;
+  font-size: 0.7rem;
+  padding-bottom: 5px;
 }
 
 .topHeading {
-    padding-bottom: 15px;
+  padding-bottom: 15px;
 }
 
 .heading {
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 .iconContent {
-    // background-color: #667085;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    gap: 10px;
-    padding: 10px;
+  // background-color: #667085;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 10px;
+  padding: 10px;
+  color: var(--secondary-color);
 }
 
 .lineStyles {
-    padding: 8px;
-    display: flex;
+  padding: 8px;
+  display: flex;
 }
 
 .vertical {
-    position: relative;
+  position: relative;
 }
 
 .verticalLine::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 1.5px;
-    /* Adjust the width of the line */
-    background-color: #7a7676;
-    /* Adjust the color as needed */
-    height: 100%;
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1.5px;
+  /* Adjust the width of the line */
+  background-color: #7a7676;
+  /* Adjust the color as needed */
+  height: 100%;
 }
